<resources>
    <string name="app_name">JBook</string>
    <string name="title_activity_consulta_reservas">ConsultaReservas</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_book">Libros</string>
    <string name="title_computers">Computadores</string>
    <string name="title_console">Consolas</string>
    <string name="title_television">Televisores</string>
    <string name="title_back">Regresar</string>
    <string name="title_room">Salas</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_reservar_sala_dia">ReservarSalaDia</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">Reservar Libro</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="title_activity_historial_reservas_t">HistorialReservasT</string>
    <string name="title_activity_registro">Registro</string>
    <string-array name="typeUsr_arrays">
        <item>Funcionario</item>
        <item>Administrador</item>
    </string-array>
    <string-array name="typeRec_arrays">
        <item>Computador</item>
        <item>Consola</item>
        <item>Sala</item>
        <item>Libro</item>
        <item>Televisor</item>
    </string-array>
    <string-array name="Locations_arrays">
    <item>Piso 5</item>
    <item>Piso 4</item>
    <item>Piso 3</item>
    <item>Piso 2</item>
    <item>Piso 1</item>
    <item>Piso 0</item>
    <item>Sótano 1</item>
    <item>Sótano 2</item>
    </string-array>
    <string-array name="typeAcad_arrays">
        <item>Estudiante</item>
        <item>Profesor</item>
    </string-array>
    <string-array name="typePC_arrays">
        <item>Portatil</item>
        <item>Mesa</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_creacion_recursos">CreacionRecursos</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_crear_recurso">CrearRecurso</string>
    <string name="noticias_text">
        "Horario 24/7 Biblioteca General para examenes finales.\n\n"

        "A partir del lunes 14 de mayo y hasta el sábado 2 de junio la Biblioteca General ampliará su habitual horario 24 horas a los fines de semana y festivos con el fin de posibilitar que todos los javerianos puedan sacar el mejor provecho de los recursos y servicios que se ofrecen para la preparación de sus exámenes finales.\n\n"
        "Todos los recursos físicos y electrónicos de la Biblioteca General, así como salas y espacios para estudio individual y grupal de los diferentes pisos estarán disponibles para toda la comunidad javeriana las 24 horas en servicio ininterrumpido, incluidos sábados, domingos y festivos, desde el 14 de mayo hasta el sábado 2 de junio, con el fin de atender las necesidades de los usuarios en el marco de la preparación de exámenes finales.\n\n"
        "Para utilizar equipos de escritorio los usuarios podrán solicitarlos en los puntos de información de cada piso. Para solicitar equipos portátiles deberán acercarse a las ventanillas del sótano 1 y el piso 0.\n"
        "La reserva de salas grupales debe realizarse mínimo 24 horas antes del requerimiento al correo salasbiblioteca@javeriana.edu.co\n\n"
        "Para consultar la colección física los usuarios pueden ingresar al Catálogo Biblos, y para acceder a las Bases de Datos el ingreso debe realizarse a través de http://www.javeriana.edu.co/biblos/bases-de-datos con usuario y contraseña javeriano.\n\n"
        "Importante: Con motivo de las elecciones presidenciales la Biblioteca General no prestará servicio el domingo 27 de mayo. Por lo tanto, la Biblioteca General cerrará el sábado 26 de mayo a las 7:00 p.m. y retomará el servicio el lunes 28 de mayo a las 6:00 a.m..\n\n"

    </string>
    <string name="reglas_text">
        "\t BIBLIOTECA GENERAL ALFONSO BORRERO CABAL, S.J.\n\n"
        "Carrera 7 # 41 - 00 320 8320 ext. 2132, 2135 biblioteca@javeriana.edu.co \n\n"
        "Horario atención comunidad javeriana: 24 horas continuas: Desde el lunes 6:00 a.m. hasta el sábado 7:00 p.m. Domingos y fest.: 10:00 a.m. a 4:00 p.m.\n\n"
        "Horario atención usuarios externos: Lunes a viernes 8:00 a.m. a 9:00 p.m. Sábado 8:00 a.m. a 5:00 p.m.\n\n"
        "\t HORARIOS SALAS DE ESTUDIO BIBLIOTECA GENERAL\n\n"
        "Pisos 5, 2, 1 y 0. Atención 24 horas continuas desde lunes 6:00 a.m. hasta sábado 7:00 p.m.\n\n"
        "Pisos 4, 3 y sótano 2. Lun. a vier: 6:00 a.m. a 11:00 p.m. Sab: 7:00 a.m. a 7:00 p.m.\n\n"
        "Sótano 1. Lun. a vier: 6:00 a.m. a 10:00 p.m. Sab: 7:00 a.m. a 7:00 p.m.\n\n"
        "Sala Música. Lun. a vier: 7:00 a.m. a 10:00 p.m. Sab: 8:00 a.m. a 4:00 p.m. \n"
        "Sala libros valiosos (piso 2). Lun. a vier: 8:00 a 5:00 p.m. "

    </string>
    <string name="title_activity_crear_usuario">CrearUsuario</string>
    <string name="title_activity_reglas">Reglas</string>
    <string name="title_activity_noticias">Noticias</string>
    <string name="title_activity_historial_reservas_nav">HistorialReservasNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_consultar_reservas_activas_nav">ConsultarReservasActivasNav
    </string>
</resources>
