<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/title_book" />

    <item
        android:id="@+id/navigation_computer"
        android:icon="@drawable/ic_laptop_chromebook_black_24dp"
        android:title="@string/title_computers" />

    <item
        android:id="@+id/navigation_console"
        android:icon="@drawable/ic_videogame_asset_black_24dp"
        android:title="@string/title_console" />

    <item
        android:id="@+id/navigation_room"
        android:icon="@drawable/ic_streetview_black_24dp"
        android:title="@string/title_room" />

    <item
        android:id="@+id/navigation_television"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/title_television" />

</menu>
